2011-04-08  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub-dev.texi: Fix spelling of "developer" throughout.
	* grub-core/fs/i386/pc/pxe.c (parse_dhcp_vendor): Fix spelling of
	"development".

2011-04-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu_entry.c (run): Use grub_memcpy rather than
	grub_strcpy since the lines aren't necessarily 0-terminated.

2011-04-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/legacy_parse.c (legacy_commands): Find doesn't set
	root on legacy.

2011-04-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/probe.c (options): Argument to set isn't optional.
	(GRUB_MOD_INIT): DEVICE isn't optional.

2011-04-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/term.c (print_ucs4_terminal): Don't try to put the
	word on new line if it's too long anyway. Fixes a hang.

2011-04-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/util/raid.h (grub_util_raid_getmembers): Make argument
	const.
	* util/grub-setup.c (main): Reuse md device name if available.
	* util/raid.c (grub_util_raid_getmembers): Receive device name and
	not GRUB name as argument.
	Based on patch by: Florian Wagner <fwagner>.

2011-04-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/multiboot_mbi.c (grub_multiboot_make_mbi):
	Place mbi on low memory for better compatibility.

2011-04-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/efiemu/efiemu.h: Use grub_memory_hook_t type.

2011-04-08  Vladimir Serbinenko  <phcoder@gmail.com>
2011-04-08  Colin Watson  <cjwatson@ubuntu.com>

	* autogen.sh: Ensure that collate and ctype locale is C.
	* conf/Makefile.common: Likewise.

2011-04-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu.c: Add missing include.

2011-04-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/raid.c [GRUB_UTIL]: Add missing include.

2011-04-08  Martin Zuther <mzuther@mzuther.de>
